--- a/index.html
+++ b/index.html
@@ -21,34 +21,38 @@
 
     <div class="container center padding-top">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-2 col-md-offset-4">
 
-                <table class="table table-striped">
+                <table class="table table-striped table-condensed">
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Username</th>
+                            <th></th>
+                            <th></th>
+                            <th class="text-centered"><h4><span class="label label-info">4</span></h4></th>
+                            <th class="text-centered"><h4><span class="label label-info">6</span></h4></th>
+                            <th class="text-centered"><h4><span class="label label-info">3</span></h4></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1</td>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td class="one-px"><b>Signature 1A</b></td>
+                            <td class="one-px text-centered"><span class="label label-danger">4</span></td>
+                            <td></td>
+                            <td><div class="b-example"/></td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>2</td>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
+                            <td class="one-px"><b>Signature 2</b></td>
+                            <td class="one-px text-centered"><span class="label label-danger">22</span></td>
+                            <td><div class="b-example"/></td>
+                            <td></td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>3</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
+                            <td class="one-px"><b>Signature 9</b></td>
+                            <td class="one-px text-centered"><span class="label label-danger">7</span></td>
+                            <td></td>
+                            <td></td>
                             <td><div class="b-example"/></td>
                         </tr>
                     </tbody>
